static page changes

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
   </div>
     <div class= "temperature">
       <div class ="precip">
-        <h2 id="perc">69%</h2>
-        <span id="answer">YES</span>
+        <h2 id="perc"></h2>
+        <span id="answer"></span>
 
       </div>
       
       <div id="degree-section">
-        <h2 id="degrees">17</h2>
+        <h2 id="degrees"></h2>
         <span id="mode">C</span>
       </div>
       
-    <div id="temperature-description">It's kinda cold</div>
+    <div id="temperature-description"></div>
   </div>
   <script src="app.js"></script>
 
